# calculator

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: continuous-integration.yml  learn-github-actions.yml  using-multiple-python-versions.yml
docs/: index.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/calculator/: __init__.py  calculations.py
tests/: test_calculator.py
tutorials/: index.html
